first stable version